--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Расписание 7"Г"</title>
+    <title>Киселёв лох</title>
 
     <link rel="stylesheet" href="index.css">
 
